# CMakeList.txt : CMake project for hello-world-gen, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (hello-world-gen "hello-world-gen.cpp" "hello-world-gen.h")

# TODO: Add tests and install targets if needed.
